2005-08-09  Andras Varga

	* cxmlelement.cc: bugfixes in the mini-XPath interpreter (leading
	'//' was handled incorrectly), and stripped minixpath.cc/h from it.

2005-08-07  Andras Varga

	* cxmlelement.cc: the builtin mini-XPath interpreter turned into a 
	class (MiniXPath), and it now understands parameters ($PARAM) inside 
	predicates; parameter values come from a cXMLElement::ParamResolver
	object.

	* cmessage.cc: implemented reference counting of encapsulated messages.
	See include/ChangeLog for more comments.

2005-07-25  Andras Varga

	* coutvect.cc: implemented recordWithTimestamp() functions.

	* cpar.cc: added call to omodp->handleParameterChange() to cModulePar 
	each time the parameter's value changes.

	* cpar.cc: removed beforeChange()/afterChange() calls from setInput()
	and setPrompt(), because these methods don't change the stored value.

	* several files: adopted to cCommBuffer change (packObject(), 
	unpackObject() moved into the class)

	* cstat.cc: cStdDev::info() now prints mean, stddev, min, max as well

2005-07-24  Andras Varga

	* cdispstr.cc: added setTagArg() method for numeric (long) argument.

	* cpar.cc: added isConstant() member to cPar

	* cmessage.cc: arrivedOn() impl change, see include/ChangeLog

	* cxmlelement.cc: added getFirstChildWithTagName(const char *tagname)
	and getNextSiblingByTagName(const char *tagname) to cXMLElement

	* ctypes.cc: cModuleType::createScheduleInit(): NULL is not allowed
	as parent module

2005-07-23  Andras Varga

	* cwatch.cc: WATCH implementation changed

	* added cstlwatch.cc

2005-04-27  Andras Varga

	* cobject.cc: fixed bug in cObject copy ctor. Problem hasn't surfaced
	earlier because no subclass used this ctor (they use op=) [reported by
	Shanti]

2005-04-21  Andras Varga

	* util.cc: implemented simtimeToStrShort().

	* cmessage.cc: changed cMessage::info() to display time *until* 
	arrivaltime as well

2005-04-05  Andras Varga
