@@ -1,3 +1,8 @@
+2005-09-12  Andras Varga
+
+	* cxmlelement.cc, minixpath.cc: fixed getElementByPath() bug 
+	introduced 2005-08-09.
+
 2005-08-09  Andras Varga
 
 	* cxmlelement.cc: bugfixes in the mini-XPath interpreter (leading
